--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/file_load_failure_text"
+        android:layout_width="332dp"
+        android:layout_height="53dp"
+        android:text="@string/file_load_fail"
+        android:textAlignment="viewStart"
+        android:textSize="24sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.388"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.814" />
+
+    <TextView
         android:id="@+id/enter_file_prompt"
         android:layout_width="126dp"
         android:layout_height="42dp"
